--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@angular/forms": "^20.0.0",
     "@angular/platform-browser": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@ng-icons/core": "^27.3.0",
+    "@ng-icons/phosphor-icons": "^27.3.0",
     "three": "^0.168.0",
     "@types/three": "^0.168.0",
     "gsap": "^3.12.5",
